--- a/Gym_App/app/src/main/res/values/strings.xml
+++ b/Gym_App/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
 
     <string name="error_email">Error al enviar el email</string>
     <string name="email_enviado">Email enviado</string>
-    <string name="title_activity_actividad_fragmentos">ActividadFragmentos</string>
+    <string name="title_activity_actividad_fragmentos"></string>
 
 
 </resources>
