--- a/Gym_App/app/src/main/res/values/strings.xml
+++ b/Gym_App/app/src/main/res/values/strings.xml
@@ -49,6 +49,8 @@
     <string name="error_email">Error al enviar el email</string>
     <string name="email_enviado">Email enviado</string>
     <string name="title_activity_actividad_fragmentos"></string>
+    <string name="search_hint">Buscar por nombre</string>
+    <string name="action_search">Buscar</string>
 
 
 </resources>
