--- a/Gym_App/app/src/main/res/values/strings.xml
+++ b/Gym_App/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
 
     <string name="error_email">Error al enviar el email</string>
     <string name="email_enviado">Email enviado</string>
-    <string name="search_hint">Buscar por nombre</string>
+    <string name="search_hint">Buscar por nombre...</string>
     <string name="action_search">Buscar</string>
     <string name="texto_descripcion">Descripcion:</string>
 
