--- a/Gym_App/app/src/main/res/values-en/strings.xml
+++ b/Gym_App/app/src/main/res/values-en/strings.xml
@@ -59,4 +59,7 @@
     <string name="dialogo_salir">Do yoy want to close the application?</string>
     <string name="dialogo_cerrarsesion">Do you want to close the session?</string>
 
+    <string name="title_activity_ejercicios_seleccionados">Selected exercises</string>
+    <string name="ejercicios_seleccionados">Select at least 1 exercise</string>
+
 </resources>
